# nexplore_gz_simulator

./: .gitignore  README.md
nexplore_gz_simulator/: CMakeLists.txt  package.xml
nexplore_gz_simulator/include/nexplore_gz_simulator/: nexplore_gz_simulator.h
nexplore_gz_simulator/launch/: nexplore_gz_simulator.launch  system_matterport.launch  vehicle_simulator.launch
nexplore_gz_simulator/mesh/: download_environments.sh
nexplore_gz_simulator/mesh/templates/: model.config  model.sdf
nexplore_gz_simulator/rviz/: rviz.rviz
nexplore_gz_simulator/src/: nexplore_gz_simulator.cpp
nexplore_gz_simulator/srv/: GetPointCloud.srv
nexplore_gz_simulator/urdf/: lidar.urdf.xacro
nexplore_gz_simulator/world/: empty_world.world
velodyne_simulator/velodyne_description/urdf/: VLP-16.urdf.xacro
